<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="mainTitleLabel">Modem Trace Control</string>
    <string name="app_name">Modem Trace Control</string>
    <string name="traceDirLabel">Trace Directory:</string>
    <string name="ongoingTraceStatusLabel">Ongoing Trace Status:</string>
    <string name="pathLabel">&lt;path&gt;</string>
    <string name="traceConfigFileLabel">Trace Configuration File</string>
    <string name="saveButton">Save</string>
    <string name="ok_button_text">OK</string>
    <string name="buttonTraceStart">Trace Off</string>
    <string name="buttontraceStop">Trace On</string>
    <string name="buttonTriggerStop">Trigger Report</string>
    <string name="buttonTriggerStart">Wait</string>
    <string name="labelTraceDir">Trace Directory:</string>
    <string name="labelLogOutput">Log Output:</string>
    <string name="logcat_appname">MTC</string>
    <string name="restart_MLR_notification">The current trace_auto.conf file will be replaced. Any ongoing trace will be stopped and this new trace_auto.conf file will be re-parsed!</string>
    <string name="autoConfFileNotFound">trace_auto.conf file not found!</string>
    <string name="labelSendCmd">Command</string>
    <string name="buttonSendCmd">Send</string>
    <string name="labelSendCmdStatus">Status</string>
    <string name="labelSettingsRoute">Trace route</string>
    <string name="labelSettingsFiles">Trace files</string>
    <string name="labelSettingsMediumBufSize">Medium buffer size (MB)</string>
    <string name="labelSettingsLongBufSize">Long buffer size (MB)</string>
    <string name="labelSettingsFileAction">Circular buffers</string>
    <string name="buttonSettingsFiles">Set</string>
    <string name="imgviewDesc"></string>
    <string name="advancedHelp">
        This control is for sending trace commands to the target which are not
        handled elsewhere in the application.\n\nInfo about available commands
        can be found in the document \"Collecting U8500 modem traces and modem
        dumps\".\n\nNote that there is no check of what\'s entered in the
        Command field.
    </string>
    <string name="labelVersionInfo">Modem Trace Control version 1.5</string>
    <string name="error_sd_card_title">No SD card</string>
    <string name="error_sd_card_desc">The SD card does not seem to be mounted, so trace can not be started. Please verify that the SD card is successfully mounted and try again.</string>
    <string name="labelTriggerOnPoweroffBox">Trigger report on power off</string>
    <string name="presetFileLocationLabel">Location of config files:</string>
    <string name="chooseFileLabel">Choose file to display:</string>
    <string name="traceAutoConfButton">Apply this file as trace_auto.conf</string>
    <string name="showingFileAtLabel">Displaying the following file:</string>

    <color name="white">#FFFFFF</color>
    <color name="black">#000000</color>
    <color name="green">#00FF00</color>
    <color name="STE_OK">#00FF00</color>
    <color name="STE_KO">#FF4040</color>
    <color name="STE_orange">#D55C19</color>
    <color name="STE_darkBlue">#44697D</color>
    <color name="STE_darkMagenta">#A71056</color>
    <color name="STE_sandOlive">#CDBC89</color>
    <color name="STE_lightGreen">#9EB28F</color>
    <color name="STE_lightBlue">#739ABC</color>

    <string-array name="trace_route">
        <item>OFF</item>
        <item>STP</item>
        <item>BUFFER</item>
        <item>BOTH</item>
    </string-array>

    <string-array name="rol_file_action">
        <item>ON</item>
        <item>OFF</item>
    </string-array>

</resources>
