<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/STE_darkMagenta"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:padding="5dp" >

    <TextView
        android:id="@+id/presetFileLocationLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="5dp"
        android:text="@string/presetFileLocationLabel"
        android:textColor="@color/white" />

    <EditText
        android:id="@+id/presetFilePathText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/presetFileLocationLabel"
        android:layout_marginLeft="1dp"
        android:background="@android:drawable/editbox_background"
        android:gravity="left"
        android:inputType="text|textNoSuggestions"
        android:singleLine="true"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/chooseFileLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/presetFilePathText"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="5dp"
        android:text="@string/chooseFileLabel"
        android:textColor="@color/white" />

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/chooseFileLabel"
        android:layout_marginTop="5dp" />

    <EditText
        android:id="@+id/traceAutoConfTextBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinner1"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="5dp"
        android:background="@android:drawable/editbox_background"
        android:gravity="left|top"
        android:inputType="text|textMultiLine|textNoSuggestions"
        android:textColor="@color/black"
        android:textSize="14.5sp" />

    <Button
        android:id="@+id/traceAutoConfButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/traceAutoConfTextBox"
        android:layout_centerHorizontal="true"
        android:text="@string/traceAutoConfButton" />

    <ImageView
        android:id="@+id/ImageViewPageIndAdv"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/labelVersionInfoAdv"
        android:contentDescription="@string/imgviewDesc"
        android:src="@drawable/second_page_indication" />

    <TextView
        android:id="@+id/labelVersionInfoAdv"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:text="@string/labelVersionInfo"
        android:textSize="8dp" />

</RelativeLayout>