<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollSettings"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true"
        android:padding="5dp" >

        <TextView
            android:id="@+id/labelSettingsRoute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="5dp"
            android:text="@string/labelSettingsRoute"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <View
            android:id="@+id/rulerSettingsRoute"
            android:layout_width="fill_parent"
            android:layout_height="2dip"
            android:layout_below="@+id/labelSettingsRoute"
            android:layout_marginTop="5dp"
            android:background="@color/STE_sandOlive" />

        <Spinner
            android:id="@+id/spinnerSettingsRoute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/labelSettingsRoute"
            android:layout_below="@+id/rulerSettingsRoute"
            android:layout_marginTop="5dp"
            android:layout_toLeftOf="@+id/buttonSettingsRoute" />

        <Button
            android:id="@+id/buttonSettingsRoute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/spinnerSettingsRoute"
            android:layout_alignRight="@+id/rulerSettingsRoute"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:text="@string/buttonSettingsFiles" />

        <TextView
            android:id="@+id/labelSettingsFiles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/labelSettingsRoute"
            android:layout_below="@+id/spinnerSettingsRoute"
            android:layout_marginTop="10dp"
            android:text="@string/labelSettingsFiles"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <View
            android:id="@+id/rulerSettingsFiles"
            android:layout_width="fill_parent"
            android:layout_height="2dip"
            android:layout_below="@+id/labelSettingsFiles"
            android:layout_marginTop="5dp"
            android:background="@color/STE_sandOlive" />

        <TextView
            android:id="@+id/labelSettingsMediumBufSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/labelSettingsFiles"
            android:layout_below="@+id/rulerSettingsFiles"
            android:layout_marginTop="5dp"
            android:text="@string/labelSettingsMediumBufSize" />

        <EditText
            android:id="@+id/textSettingsMediumBufSize"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/labelSettingsMediumBufSize"
            android:layout_below="@+id/labelSettingsMediumBufSize"
            android:ems="10"
            android:inputType="number" />

        <TextView
            android:id="@+id/labelSettingsLongBufSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/labelSettingsFiles"
            android:layout_below="@+id/textSettingsMediumBufSize"
            android:layout_marginTop="5dp"
            android:text="@string/labelSettingsLongBufSize" />

        <EditText
            android:id="@+id/textSettingsLongBufSize"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/labelSettingsLongBufSize"
            android:layout_below="@+id/labelSettingsLongBufSize"
            android:ems="10"
            android:inputType="number" />

        <TextView
            android:id="@+id/labelSettingsFileAction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/labelSettingsFiles"
            android:layout_below="@+id/textSettingsLongBufSize"
            android:layout_marginTop="5dp"
            android:text="@string/labelSettingsFileAction" />

        <Spinner
            android:id="@+id/spinnerSettingsFileAction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/labelSettingsFiles"
            android:layout_below="@+id/labelSettingsFileAction"
            android:layout_toLeftOf="@+id/buttonSettingsFiles" />

        <Button
            android:id="@+id/buttonSettingsFiles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/spinnerSettingsFileAction"
            android:layout_alignRight="@+id/rulerEnd"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:text="@string/buttonSettingsFiles" />

        <View
            android:id="@+id/rulerEnd"
            android:layout_width="fill_parent"
            android:layout_height="2dip"
            android:layout_below="@+id/spinnerSettingsFileAction"
            android:layout_marginTop="10dp"
            android:background="@color/STE_sandOlive" />

        <ImageView
            android:id="@+id/ImageViewPageIndAdv"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/labelVersionInfoAdv"
            android:contentDescription="@string/imgviewDesc"
            android:src="@drawable/fourth_page_indication" />

        <TextView
            android:id="@+id/labelVersionInfoAdv"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:text="@string/labelVersionInfo"
            android:textSize="8dp" />
    </RelativeLayout>

</ScrollView>